<resources>
    <string name="app_name">百事通</string>>
    <string name="life">生活</string>
    <string name="trip">出行</string>
    <string name="lie">休闲</string>
    <string name="deposit">存款</string>
    <string name="mobile">手机</string>
    <string name="postcode">邮编</string>
    <string name="weather_list">天气:</string>
    <string name="flight">航班</string>
    <string name="train">列车</string>
    <string name="sudoku">数独</string>
    <string name="snake">贪吃蛇</string>
    <string name="look">连连看</string>
    <string name="forecast">未来预报</string>
    <string name="suggest">生活建议</string>
    <string name="calculate">计算</string>
    <string name="phone">请输入手机号</string>
    <string name="money">存款金额</string>
    <string name="type">存款类型</string>
    <string name="period">存款周期</string>
    <string name="result">计算结果</string>
    <string name="rate">存款利率</string>
    <string name="accrual">利息金额></string>
    <string name="input">输入数据</string>
    <string name="sum"><![CDATA[<本息合计]]></string>
    <string name="year">年</string>
    <string name="rmb">RMB</string>
    <string name="persent">%</string>
    <string name="intro">贴士:存款利率计算器用于查询人民币及外币的各种类型的储蓄存款
        在每个银行的存款利率以及起存金额\n
    2015年10月24日央行最新存款基准利率，一年定期存款 1.50%，活期存款 0.35%，点击了解详情>></string>
    <string name="flight_query">航班查询</string>
    <string name="air_line">航线查询</string>
    <string name="address">详细地址:</string>
    <string name="select_area">%1$s%2$s%3$s%4$s的邮编为:%5$s</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mob_api">正在解析来自MobApi的数据…</string>
    <string name="province">省份:</string>
    <string name="city">城市:</string>
    <string name="area">区县:</string>
    <string name="return_mob">请输入手机号以返回来自移动开发联盟的JSON</string>
    <string name="select_address">选择地址以转换成邮编</string>
    <string name="input_post_code">输入邮编以转换成地址</string>
    <string name="weather">天气</string>
    <string name="temperature">温度:</string>
    <string name="humidity">湿度:</string>
    <string name="wind">风力:</string>
    <string name="sunset_time">日落时间:</string>
    <string name="sunrise_time">日出时间:</string>
    <string name="air_level">空气质量等级:</string>
    <string name="air_population">空气质量指数:</string>
    <string name="sport">运动指数:</string>
    <string name="update_time">更新时间:</string>
    <string name="clothe">穿衣指数:</string>
    <string name="wash_clothe">洗衣指数:</string>
    <string name="wind_dir">风向</string>
    <string name="temperature_day">白天温度:</string>
    <string name="temperature_night">夜间温度:</string>
    <string name="airport_name">机场名称:</string>
    <string name="city_code">城市代码:</string>
    <string name="city_name">城市名称:</string>
    <string name="three_code">机场三字码:</string>
    <string name="air_company">航空公司:</string>
    <string name="go">出发:</string>
    <string name="end">到达:</string>
    <string name="on_time_rate">航班准点率:</string>
    <string name="hours_underway">航行时间:</string>
    <string name="departure_airport">出发机场:</string>
    <string name="departure_airport_code">出发机场代码:</string>
    <string name="departure_city_code">出发城市代码:</string>
    <string name="departure_city_name">出发城市名称:</string>
    <string name="departure_terminal">出发航站楼:</string>
    <string name="scheduled_departure_time">计划起飞时间:</string>
    <string name="scheduled_arrival_time">计划到达时间:</string>
    <string name="arrival_airport">到达机场:</string>
    <string name="arrival_airport_code">到达机场代码:</string>
    <string name="arrival_city_code">到达城市代码:</string>
    <string name="arrival_city_name">到达城市名称:</string>
    <string name="arrival_terminal">到达航站楼:</string>
    <string name="flight_circle">航班周期:</string>
    <string name="future_week">未来天气:</string>
    <string name="cold">感冒指数:</string>
    <string name="arrive">到达</string>
    <string name="start">出发</string>
    <string name="ticket_query">车票查询</string>
    <string name="query_result">查询结果</string>
    <string name="train_num">车次查询</string>
    <string name="input_train_num">或者输入车次</string>
    <string name="input_start_and_arrive">输入起点和终点</string>
    <string name="skip">跳转</string>
</resources>
