<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessLeaf">

            <Button
                android:id="@+id/btn1"
                android:text="@string/_1"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn2"
                android:text="@string/_2"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn3"
                android:text="@string/_3"
                tools:ignore="ButtonStyle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessLeaf">

            <Button
                android:id="@+id/btn4"
                android:text="@string/_4"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn5"
                android:text="@string/_5"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn6"
                android:text="@string/_6"
                tools:ignore="ButtonStyle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessLeaf">

            <Button
                android:id="@+id/btn7"
                android:text="@string/_7"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn8"
                android:text="@string/_8"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn9"
                android:text="@string/_9"
                tools:ignore="ButtonStyle" />
        </TableRow>

    </TableLayout>
</LinearLayout>