<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--存款金额-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableEnd="@drawable/arrow"
        android:drawableStart="@drawable/arrow"
        android:gravity="center"
        android:text="@string/input"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:orientation="horizontal"
        tools:ignore="UselessLeaf,UselessParent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|start"
            android:text="@string/money"
            android:textColor="#000" />

        <cn.dev.knowall.view.DeleteEdit
            android:id="@+id/et_money"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="4"
            android:background="@drawable/edit_bg"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:textCursorDrawable="@drawable/cursor_color"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/rmb"
            android:textColor="#000" />
    </LinearLayout>
    <!--存款类型--> <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:drawableEnd="@drawable/arrow"
    android:drawableStart="@drawable/arrow"
    android:gravity="center"
    android:text="@string/result"
    android:textColor="@color/colorPrimary"
    android:textSize="20sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:orientation="horizontal"
        tools:ignore="UselessLeaf,UselessParent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center|start"
            android:text="@string/period"
            android:textColor="#000" />

        <Spinner
            android:id="@+id/sp_type"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="3" />


        <cn.dev.knowall.view.DeleteEdit
            android:id="@+id/et_year"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/edit_bg"
            android:gravity="center"
            android:inputType="number"
            android:textCursorDrawable="@drawable/cursor_color" />

        <TextView
            android:id="@+id/tv_year"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/year"
            android:textColor="#000" />
    </LinearLayout>
    <!--存款利率-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:orientation="horizontal"
        tools:ignore="UselessLeaf,UselessParent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|start"
            android:text="@string/rate"
            android:textColor="#000" />

        <cn.dev.knowall.view.DeleteEdit
            android:id="@+id/et_rate"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="4"
            android:background="@drawable/edit_bg"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:textCursorDrawable="@drawable/cursor_color"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/persent"
            android:textColor="#000"
            android:textSize="33sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/button_gradient"
        android:text="@string/calculate"
        android:textColor="#fff"
        android:textSize="30sp" />


    <!--查询结果-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:drawable/editbox_background"
        android:orientation="horizontal"
        tools:ignore="UselessLeaf">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_weight="1"
            android:text="@string/accrual"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/tv_accrual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/rmb"
            android:textColor="#f00" />

        <TextView
            android:id="@+id/tv_sum"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/rmb"
            android:textColor="#f00" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center|end"
            android:text="@string/sum"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/intro"
        android:textColor="@color/colorAccent" />
</LinearLayout>