<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".train.TrainFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableEnd="@drawable/arrow"
        android:drawableStart="@drawable/arrow"
        android:gravity="center"
        android:text="@string/input_start_and_arrive"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessLeaf,UselessParent">

        <cn.dev.knowall.view.DeleteEdit
            android:id="@+id/et_start"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/edit_bg"
            android:gravity="center"
            android:hint="@string/start"
            android:textColorHint="#000"
            android:textCursorDrawable="@drawable/cursor_color" />

        <Button
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/switcher" />

        <cn.dev.knowall.view.DeleteEdit
            android:id="@+id/et_arrive"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/edit_bg"
            android:gravity="center"
            android:hint="@string/arrive"
            android:textColorHint="#000"
            android:textCursorDrawable="@drawable/cursor_color" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_query_train"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_gradient"
        android:text="@string/ticket_query"
        android:textColor="#fff"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableEnd="@drawable/arrow"
        android:drawableStart="@drawable/arrow"
        android:gravity="center"
        android:text="@string/input_train_num"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessLeaf">

        <EditText
            android:id="@+id/et_train_num"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="4"
            android:background="@drawable/edit_bg"
            android:inputType="text"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/btn_query_train_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_gradient"
            android:text="@string/train_num"
            android:textColor="#fff"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableEnd="@drawable/arrow"
        android:drawableStart="@drawable/arrow"
        android:gravity="center"
        android:text="@string/query_result"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/tv_train_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
