<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessLeaf">

        <TextView
            android:id="@+id/tv_week"
            android:layout_marginVertical="10dp"
            android:textColor="#fff"
            android:textSize="20sp"
            tools:targetApi="o" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessLeaf">

        <TextView
            android:layout_weight="1"
            android:text="@string/temperature"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/tv_temperature_week"
            android:layout_weight="1"
            android:textColor="#fff" />

        <TextView
            android:layout_weight="1"
            android:text="@string/wind_dir"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/tv_wind_dir"
            android:layout_weight="1"
            android:textColor="#fff" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessLeaf">

        <TextView
            android:layout_weight="1"
            android:text="@string/temperature_day"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/tv_temperature_day"
            android:layout_weight="1"
            android:textColor="#fff" />

        <TextView
            android:layout_weight="1"
            android:text="@string/temperature_night"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/tv_temperature_night"
            android:layout_weight="1"
            android:textColor="#fff" />
    </TableRow>
</TableLayout>