<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/flight_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessLeaf">

        <EditText
            android:id="@+id/et_go"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/go"
            android:inputType="text"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/btn_switch_to"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/switcher" />

        <EditText
            android:id="@+id/et_end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/end"
            android:inputType="text"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_air_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/air_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:inputType="text"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/btn_air_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flight_query" />
    </LinearLayout>

    <ListView
        android:id="@+id/lvResult"
        android:layout_width="match_parent"
        android:layout_height="1000dp"
        android:cacheColorHint="#3000"
        android:divider="#ccc"
        android:dividerHeight="1px"
        android:listSelector="#3000" />
</LinearLayout>